<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_margin="5dp"
    app:cardCornerRadius="10dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingTop="7dp"
        android:paddingStart="16dp"
        android:background="@color/teal_200">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="2">
            <TextView
                android:id="@+id/history_city"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:textColor="@color/black"
                android:textStyle="bold|italic"
                android:text="@string/history_city"
                android:layout_weight="1"/>
            <Space
                android:layout_width="10dp"
                android:layout_height="match_parent" />
            <TextView
                android:id="@+id/history_date"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:textColor="@color/black"
                android:textStyle="bold|italic"
                android:text="@string/history_date"
                android:layout_weight="1"/>

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            android:weightSum="5">
            <TextView
                android:id="@+id/history_temp"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:layout_weight="2"
                android:text="@string/history_temp"
                android:textSize="25sp"/>
            <TextView
                android:id="@+id/history_wind"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:layout_weight="2"
                android:textStyle="italic"
                android:text="@string/history_wind"
                android:textSize="16sp"/>
            <ImageView
                android:id="@+id/history_icon"
                android:layout_width="0dp"
                android:layout_height="70dp"
                android:importantForAccessibility="no"
                android:layout_weight="1"
                android:src="@drawable/sun"/>
        </LinearLayout>

    </LinearLayout>
</com.google.android.material.card.MaterialCardView>