<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_margin="5dp"
    app:cardCornerRadius="10dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingTop="7dp"
        android:paddingStart="16dp"
        android:background="@color/light_color">
        <TextView
            android:id="@+id/date_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:textColor="@color/black"
            android:textStyle="bold|italic"
            android:text="@string/second_date"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            android:weightSum="5">
            <TextView
                android:id="@+id/date_temp"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:layout_weight="2"
                android:text="@string/date_temp"
                android:textSize="25sp"/>
            <TextView
                android:id="@+id/date_wind"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:layout_weight="2"
                android:textStyle="italic"
                android:text="@string/date_wind"
                android:textSize="14dp"/>
            <ImageView
                android:id="@+id/date_icon"
                android:layout_width="0dp"
                android:layout_height="70dp"
                android:importantForAccessibility="no"
                android:layout_weight="1"
                android:src="@drawable/sun"/>
        </LinearLayout>

    </LinearLayout>
</com.google.android.material.card.MaterialCardView>