<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".FirstFragment">

        <LinearLayout
            android:id="@+id/main_container"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="visible"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="5dp">

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/edit_city"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/enter_city_name"
                        android:inputType="text"
                        android:lines="1"
                        android:maxLines="1" />
                </com.google.android.material.textfield.TextInputLayout>

                <ImageView
                    android:id="@+id/search_icon"
                    android:layout_width="50dp"
                    android:layout_height="match_parent"
                    android:padding="10dp"
                    android:src="@drawable/search"
                    tools:ignore="ContentDescription" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/address_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/city_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:saveEnabled="false"
                    android:text="Riga"
                    android:textColor="@color/black"
                    android:textSize="32sp"
                    android:layout_marginBottom="5dp" />

                <TextView
                    android:id="@+id/updated_time"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Updated at April 19, 17h08"
                    android:textColor="@color/black"
                    android:textSize="14sp" />

                <ImageView
                    android:id="@+id/image_main"
                    android:layout_width="120dp"
                    android:layout_height="120dp"
                    android:layout_gravity="center"
                    android:src="@drawable/sun" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/forecast_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/conditions"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="Sunny"
                    android:textSize="18dp" />

                <TextView
                    android:id="@+id/temperature"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="25 C"
                    android:textSize="45sp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/temp_min"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="22 C" />

                    <Space
                        android:layout_width="50dp"
                        android:layout_height="wrap_content" />

                    <TextView
                        android:id="@+id/temp_max"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="27 C" />
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/main_details_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginEnd="5dp"
                android:layout_marginTop="15dp"
                android:orientation="vertical">

                <LinearLayout
                    android:id="@+id/details_layout1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:weightSum="2">

                    <androidx.cardview.widget.CardView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        app:cardBackgroundColor="@color/light_color"
                        app:cardCornerRadius="10dp"
                        android:layout_weight="1">
                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:orientation="vertical"
                            android:paddingTop="5dp"
                            android:paddingBottom="5dp">

                            <ImageView
                                android:layout_width="25dp"
                                android:layout_height="25dp"
                                android:src="@drawable/wind" />

                            <Space
                                android:layout_width="wrap_content"
                                android:layout_height="5dp" />

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/wind_title"
                                android:textSize="12dp" />

                            <TextView
                                android:id="@+id/wind_data"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="4 m/s"
                                android:textSize="14dp" />
                        </LinearLayout>

                    </androidx.cardview.widget.CardView>


                    <Space
                        android:layout_width="10dp"
                        android:layout_height="wrap_content" />

                    <androidx.cardview.widget.CardView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        app:cardBackgroundColor="@color/light_color"
                        app:cardCornerRadius="10dp"
                        android:layout_weight="1"
                        android:padding="5dp">
                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:orientation="vertical"
                            android:paddingTop="5dp"
                            android:paddingBottom="5dp">

                            <ImageView
                                android:layout_width="25dp"
                                android:layout_height="25dp"
                                android:src="@drawable/humidity" />

                            <Space
                                android:layout_width="wrap_content"
                                android:layout_height="5dp" />

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/humidity_title"
                                android:textSize="12dp" />

                            <TextView
                                android:id="@+id/humidity_data"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="20 %"
                                android:textSize="14dp" />
                        </LinearLayout>

                    </androidx.cardview.widget.CardView>

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/details_layout2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:orientation="horizontal"
                    android:gravity="center"
                    android:weightSum="2">

                    <androidx.cardview.widget.CardView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        app:cardBackgroundColor="@color/light_color"
                        app:cardCornerRadius="10dp"
                        android:layout_weight="1"
                        android:padding="5dp">
                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:orientation="vertical"
                            android:paddingTop="5dp"
                            android:paddingBottom="5dp">

                            <ImageView
                                android:layout_width="25dp"
                                android:layout_height="25dp"
                                android:src="@drawable/pressure" />

                            <Space
                                android:layout_width="wrap_content"
                                android:layout_height="5dp" />

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/pressure_title"
                                android:textSize="12dp" />

                            <TextView
                                android:id="@+id/pressure"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="4 hPa"
                                android:textSize="14dp" />
                        </LinearLayout>

                    </androidx.cardview.widget.CardView>
                    <Space
                        android:layout_width="10dp"
                        android:layout_height="wrap_content" />
                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:weightSum="2"
                        android:orientation="vertical">

                        <Button
                            android:id="@+id/button_next"
                            android:layout_width="match_parent"
                            android:layout_height="0dp"
                            android:layout_weight="1"
                            android:gravity="center"
                            android:text="@string/see_more"
                            android:textSize="13sp" />

                        <Button
                            android:id="@+id/button_history"
                            android:layout_width="match_parent"
                            android:layout_height="0dp"
                            android:layout_weight="1"
                            android:text="@string/history_btn"
                            android:textSize="12sp"
                            android:gravity="center"
                            android:textColor="@color/black"
                            android:backgroundTint="@color/purple_200" />
                    </LinearLayout>
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>